@@ -3,8 +3,8 @@ Title: Reference of CMake policies.
 Section: Programming
 
 Format: HTML
-Index: /usr/share/doc/cmake-docs/cmake-policies.html
-Files: /usr/share/doc/cmake-docs/cmake-policies.html
+Index: /usr/share/doc/cmake-doc/cmake-policies.html
+Files: /usr/share/doc/cmake-doc/cmake-policies.html
 
 Format: Text
-Files: /usr/share/doc/cmake-docs/cmake-policies.txt.gz
+Files: /usr/share/doc/cmake-doc/cmake-policies.txt.gz
