@@ -3,8 +3,8 @@ Title: Reference of the testing driver provided by CMake.
 Section: Programming
 
 Format: HTML
-Index: /usr/share/doc/cmake-docs/ctest.html
-Files: /usr/share/doc/cmake-docs/ctest.html
+Index: /usr/share/doc/cmake-doc/ctest.html
+Files: /usr/share/doc/cmake-doc/ctest.html
 
 Format: Text
-Files: /usr/share/doc/cmake-docs/ctest.txt.gz
+Files: /usr/share/doc/cmake-doc/ctest.txt.gz
