@@ -6,6 +6,9 @@ cmake (2.8.3-2) UNRELEASED; urgency=low
   * debian/gbp.conf: Added, to ensure we use pristine-tar.
   * debian/patches/FindTCL_fix_#600245.diff: Added. (Closes: #600245)
 
+  [ Modestas Vainius ]
+  * Install cmake documentation into /usr/share/doc/cmake-doc/ (LP: #669197).
+
  -- Kai Wasserbäch <debian@carbon-project.org>  Fri, 27 Nov 2010 10:41:10 +0100
 
 cmake (2.8.3-1) experimental; urgency=low
